--- a/debian/rules
+++ b/debian/rules
@@ -1,10 +1,12 @@
 #!/usr/bin/make -f
 
-include /usr/share/quilt/quilt.make
-
 DEB_HOST_ARCH_OS	?= $(shell dpkg-architecture -qDEB_HOST_ARCH_OS)
 DEB_HOST_GNU_TYPE	?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE	?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+
+export CFLAGS += -Wall
+export LDFLAGS += -Wl,--as-needed -Wl,-O1 -Wl,-z,defs
+
 
 ifneq ($(DEB_HOST_GNU_TYPE),$(DEB_BUILD_GNU_TYPE))
 	CROSS=CC=$(DEB_HOST_GNU_TYPE)-gcc
@@ -12,7 +14,7 @@ else
 	CROSS=
 endif
 
-clean: unpatch
+clean:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp
@@ -22,7 +24,7 @@ clean: unpatch
 
 	dh_clean
 
-config.status: configure patch
+config.status: configure
 	dh_testdir
 
 ifneq "$(wildcard /usr/share/misc/config.guess)" ""
