--- a/debian/control
+++ b/debian/control
@@ -6,10 +6,10 @@ Uploaders: TANIGUCHI Takaki <takaki@debian.org>,
 	Rogério Brito <rbrito@ime.usp.br>
 DM-Upload-Allowed: yes
 Build-Depends:
- debhelper (>= 7),
+ debhelper (>= 8.1.3~),
  autotools-dev,
- libcam-dev [kfreebsd-amd64 kfreebsd-i386]
-Standards-Version: 3.8.3
+ libcam-dev [kfreebsd-any]
+Standards-Version: 3.9.3
 Vcs-Browser: http://git.debian.org/?p=pkg-opt-media/cdparanoia.git 
 Vcs-Git: git://git.debian.org/pkg-opt-media/cdparanoia.git
 Homepage: http://www.xiph.org/paranoia/
@@ -39,6 +39,8 @@ Description: audio extraction tool for sampling CDs (debug)
 Package: libcdparanoia0
 Section: libs
 Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: audio extraction tool for sampling CDs (library)
  An audio extraction tool for sampling CDs. Unlike similar programs such as
@@ -51,6 +53,7 @@ Description: audio extraction tool for sampling CDs (library)
 Package: libcdparanoia-dev
 Section: libdevel
 Architecture: any
+Multi-Arch: same
 Depends: ${misc:Depends}, ${arch-os-dev}, libcdparanoia0 (= ${binary:Version})
 Provides: libcdparanoia0-dev
 Description: audio extraction tool for sampling CDs (development)
