--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,7 @@
 DEB_HOST_ARCH_OS	?= $(shell dpkg-architecture -qDEB_HOST_ARCH_OS)
 DEB_HOST_GNU_TYPE	?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE	?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+DEB_HOST_MULTIARCH      ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 export CFLAGS += -Wall
 export LDFLAGS += -Wl,--as-needed -Wl,-O1 -Wl,-z,defs
@@ -34,7 +35,7 @@ ifneq "$(wildcard /usr/share/misc/config.sub)" ""
 	cp -f /usr/share/misc/config.sub configure.sub
 endif
 
-	./configure $(CROSS) --prefix=/usr --mandir=\$${prefix}/share/man CFLAGS="$(CFLAGS)"
+	./configure $(CROSS) --libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH) --prefix=/usr --mandir=\$${prefix}/share/man CFLAGS="$(CFLAGS)"
 
 build: build-stamp
 build-stamp: config.status
